--- a/Desafios /D012/estilo/style.css
+++ b/Desafios /D012/estilo/style.css
@@ -15,12 +15,12 @@
 html,body {
 
     min-height: 100vh;
-    background-color: violet;
+    background-color: rgb(6, 0, 0);
     font-family: var(--font3);
 }
 
 header {
-background-color: black;
+background-color: rgb(7, 0, 7);
 color: aliceblue;
 text-align: center;
 font-family: var(--font3);
@@ -55,19 +55,39 @@ line-height: 2em;
 font-family: var(--font3);
 }
 
+section >p {
+padding-bottom: 2em;
+
+}
+
 section.normal {
     background-color: aliceblue;
-    color: black; 
+    color: rgb(0, 0, 0); 
 }
 
 section.imagem {
 
     background-color: aquamarine;
     color: aliceblue;
+    box-shadow: inset 6px 6px 13px 0px rgba(4, 4, 4, 0.48);
+    background-attachment: fixed; 
 }
 
 section.imagem >p{
-background-color: rgba(0, 0, 0, 0.369);
+background-color: rgba(0, 0, 0, 0.111);
+text-shadow: 1px 1px 0px black;
+}
+
+section#img01{
+background-image: url(../imagens/img1.png);
+background-position: center;
+background-size: cover;
+}
+section#img02{ 
+background-image: url(../imagens/img2.png);
+background-position: center;
+background-size: cover;
+
 }
 
 footer{
